<?xml version="1.0"?>
<package format="2">
  <name>apriltagscpp</name>
  <version>0.0.2</version>
  <description>
    Personal Robotics Lab's fork of Apriltags which was originally
    developed by the April laboratory at the University of Michigan.
    The Swatbotics port reimplements the detection core using OpenCV
    and CGAL for improved performance.
  </description>
  <url type="repository">https://github.com/personalrobotics/apriltags-cpp</url>
  <maintainer email="awalsman@andrew.cmu.edu">Aaron Walsman</maintainer>
  <author email="awalsman@andrew.cmu.edu">Aaron Walsman</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <!-- This is required by REP-136. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>git</build_depend>
  <exec_depend>catkin</exec_depend>
  <depend>roscpp</depend>
  <buildtool_depend>cmake</buildtool_depend>
  <!-- <export>
    <build_type>cmake</build_type>
  </export> -->
</package>
